# workspaceManagerAgent

./: README.md
actor/: TestDataValidation.go  TestMain.go  TestRestApi.go  TestSwayApi.go  actionExecution.go  actionParsing.go  dataValidation.go  go.mod  go.sum  ipcManager.go  main.go  restServer.go  stateQuerying.go  stateScanning.go  stateServer.go
actor/state/Sway/: stateQuerying.go  stateScanning.go
model/: pyproject.toml
model/src/: config.py  main.py
model/src/agent/: command_preparation.py  performance_data.py  program_loop.py
model/src/api/: command_schema.py  grid_system_schema.py  rest_client.py  state_schema.py
model/src/api/schema_validation/: grid_system_schema.py  state_schema.py
model/src/caching/: embedding_caching.py  pre_training_caching.py
model/src/model/: config.py  input_representation.py  model_main.py
model/src/model/agent/: command_preparation.py  program_loop.py
model/src/model/api/: rest_client.py
model/src/model/api/schema_validation/: command_schema.py  grid_system_schema.py  state_schema.py
model/src/model/model/: action_discretization.py  attention.py  embedding_caching.py  input_representation.py  model_main.py  policy_head.py  preprocessing.py
model/src/training/algorithmic_supervised_pre_training/: good_layout_generation.py  training_process.py
