[project]
name = "model"
version = "0.1.0"
description = ""
authors = [
    {name = "Patryk Pol",email = "sth@sth.ccom"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "pydantic (>=2.11.7,<3.0.0)",
    "aiohttp (>=3.12.15,<4.0.0)",
    "torch (>=2.8.0,<3.0.0)",
    "sentence-transformers (>=5.1.0,<6.0.0)",
]

[tool.poetry]
packages = [{include = "model", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
